Prepare next development version.

--- a/config/version.properties
+++ b/config/version.properties
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-wsohb_version = 0.1-alpha06
+wsohb_version = 0.1-alpha07-SNAPSHOT
 
 # wsoh_sqlite_wasm_sqlite_android_wasm_emscripten_icu_346_version = 0.1-SNAPSHOT
 # wsoh_sqlite_wasm_sqlite_android_wasm_emscripten_icu_mt_pthread_346_version = 0.1-SNAPSHOT
