--- a/config/version.properties
+++ b/config/version.properties
@@ -6,6 +6,8 @@
 
 wsohb_version = 0.1-alpha07-SNAPSHOT
 
+# wsoh_common_xdg_version = 0.1-SNAPSHOT
+# wsoh_sqlite_driver_binary_reader_version = 0.1-SNAPSHOT
 # wsoh_sqlite_wasm_sqlite_android_wasm_emscripten_icu_346_version = 0.1-SNAPSHOT
 # wsoh_sqlite_wasm_sqlite_android_wasm_emscripten_icu_mt_pthread_346_version = 0.1-SNAPSHOT
 # wsoh_sqlite_driver_binary_api_version = 0.1-alpha04-SNAPSHOT
