--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -22,7 +22,7 @@ env:
 jobs:
   publish:
     name: Assemble, publish to S3
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 60
     permissions:
       contents: write
@@ -35,7 +35,7 @@ jobs:
 
       - name: Install WABT
         run: |
-          curl -fsSL https://github.com/WebAssembly/wabt/releases/download/1.0.35/wabt-1.0.35-ubuntu-20.04.tar.gz | \
+          curl -fsSL https://github.com/WebAssembly/wabt/releases/download/1.0.35/wabt-1.0.35-macos-14.tar.gz | \
             tar -C $HOME -xzf -
           echo "$HOME/wabt-1.0.35/bin" >> $GITHUB_PATH
 
