Add android target

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,13 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 
+#Android
+android.useAndroidX=true
+android.enableJetifier=false
+android.defaults.buildfeatures.resvalues=false
+android.defaults.buildfeatures.shaders=false
+android.library.defaults.buildfeatures.androidresources=false
+
 #Kotlin
 kotlin.code.style=official
 
