--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,12 +12,12 @@ detekt = "1.23.6"
 diktat = "2.0.0"
 gradle-maven-publish-plugin = "0.29.0"
 kotlin = "2.0.0"
-kotlinx-binary-compatibility-validator = "0.14.0"
+kotlinpoet = "1.18.0"
+kotlinx-binary-compatibility-validator = "0.16.2"
 spotless = "6.25.0"
 junit5 = "5.10.3"
 kotlinx-io ="0.5.1"
 mockk = "1.13.11"
-
 
 [libraries]
 assertk = { group = "com.willowtreeapps.assertk", name = "assertk", version.ref = "assertk" }
@@ -26,6 +26,7 @@ junit-jupiter = { group = "org.junit.jupiter", name = "junit-jupiter" }
 junit-jupiter-api = { group = "org.junit.jupiter", name = "junit-jupiter-api" }
 junit-jupiter-engine = { group = "org.junit.jupiter", name = "junit-jupiter-engine" }
 junit-jupiter-params = { group = "org.junit.jupiter", name = "junit-jupiter-params" }
+kotlinpoet = { group = "com.squareup", name = "kotlinpoet", version.ref = "kotlinpoet" }
 kotlinx-io = { group = "org.jetbrains.kotlinx", name = "kotlinx-io-core", version.ref = "kotlinx-io" }
 mockk = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
 
