--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -56,6 +56,9 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
+          build-scan-publish: true
+          build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
+          build-scan-terms-of-use-agree: "yes"
           cache-encryption-key: ${{ secrets.GradleEncryptionKey }}
           dependency-graph: generate
 
