--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ kotlin.daemon.jvmargs=-Dfile.encoding=UTF-8 \
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
+# org.gradle.unsafe.isolated-projects=true
 
 #Android
 android.useAndroidX=true
