--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,12 +6,13 @@ icu = "75.1"
 androidCompileSdk = "31"
 androidMinSdk = "14"
 
+# keep in sync with root settings.gradle
 agp = "8.2.2"
 assertk = "0.28.1"
 detekt = "1.23.6"
 diktat = "2.0.0"
 gradle-maven-publish-plugin = "0.29.0"
-kotlin = "2.0.0"
+kotlin = "2.0.20-RC"
 kotlinpoet = "1.18.0"
 kotlinx-binary-compatibility-validator = "0.16.2"
 spotless = "6.25.0"
