Make validation optional

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -39,8 +39,7 @@ jobs:
       - name: Install required software
         run: |
           brew update
-          brew install make wabt llvm
-          echo "/usr/local/opt/llvm/bin/" >> $GITHUB_PATH
+          brew install make wabt
 
       - name: Install EMSDK
         uses: mymindstorm/setup-emsdk@v14
