--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,5 @@ kotlin.code.style=official
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.import.enableKgpDependencyResolution=true
 
+systemProp.org.gradle.internal.publish.checksums.insecure=true
 systemProp.org.gradle.s3.endpoint=https://storage.yandexcloud.net
