Update Gradle and other dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,8 @@ org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configuration-cache=true
 # org.gradle.unsafe.isolated-projects=true
+org.gradle.java.installations.auto-detect=true
+org.gradle.java.installations.auto-download=false
 
 #Android
 android.useAndroidX=true
