--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ androidMinSdk = "14"
 # keep in sync with root settings.gradle
 agp = "8.7.3"
 assertk = "0.28.1"
+chicory = "1.1.0"
 detekt = "1.23.8"
 diktat = "2.0.0"
 gradle-maven-publish-plugin = "0.30.0"
@@ -17,6 +18,7 @@ kotlin-compile-testing-fork = "0.7.0"
 kotlinpoet = "2.0.0"
 kotlinx-binary-compatibility-validator = "0.17.0"
 spotless = "7.0.2"
+javaparser = "3.26.3"
 junit5 = "5.12.0"
 kotlinx-io ="0.6.0"
 mockk = "1.13.16"
@@ -38,9 +40,13 @@ tempfolder = { group = "at.released.tempfolder", name = "tempfolder-sync", versi
 # Dependencies of the included build-logic
 agp-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
 agp-plugin-api = { module = "com.android.tools.build:gradle-api", version.ref = "agp" }
+chicory-aot = { module = "com.dylibso.chicory:aot-experimental", version.ref = "chicory" }
+chicory-runtime = { module = "com.dylibso.chicory:runtime", version.ref = "chicory" }
+chicory-wasm = { module = "com.dylibso.chicory:wasm", version.ref = "chicory" }
 detekt-formatting = { group = "io.gitlab.arturbosch.detekt", name = "detekt-formatting", version.ref = "detekt" }
 detekt-plugin = { group = "io.gitlab.arturbosch.detekt", name = "detekt-gradle-plugin", version.ref = "detekt" }
 diktat-plugin = { group = "com.saveourtool.diktat", name = "diktat-gradle-plugin", version.ref = "diktat" }
+javaparser = { module = "com.github.javaparser:javaparser-symbol-solver-core", version.ref = "javaparser" }
 gradle-maven-publish-plugin = { module = "com.vanniktech:gradle-maven-publish-plugin", version.ref = "gradle-maven-publish-plugin" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinx-binary-compatibility-validator-plugin = { module = "org.jetbrains.kotlinx.binary-compatibility-validator:org.jetbrains.kotlinx.binary-compatibility-validator.gradle.plugin", version.ref = "kotlinx-binary-compatibility-validator" }
