Remove android target from AOT builds, fix generated class names

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ kotlin.code.style=official
 #MPP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.mpp.import.enableKgpDependencyResolution=true
+kotlin.native.enableKlibsCrossCompilation=true
 
 systemProp.org.gradle.internal.publish.checksums.insecure=true
 systemProp.org.gradle.s3.endpoint=https://storage.yandexcloud.net
