--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -6,6 +6,10 @@ on:
       - '*'
   workflow_dispatch:
     inputs:
+      upload_to_mavencentral:
+        description: 'Publish to Maven Central'
+        type: boolean
+        default: false
       upload_to_s3:
         description: 'Publish to maven.pixnews.ru'
         type: boolean
@@ -72,6 +76,8 @@ jobs:
         env:
           YANDEX_S3_ACCESS_KEY_ID: ${{ secrets.YANDEX_S3_ACCESS_KEY_ID }}
           YANDEX_S3_SECRET_ACCESS_KEY: ${{ secrets.YANDEX_S3_SECRET_ACCESS_KEY }}
+          ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_USERNAME }}
+          ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_IN_MEMORY_KEY }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyId: FCF62075
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_IN_MEMORY_KEY_PASSWORD }}
@@ -79,6 +85,7 @@ jobs:
           ./gradlew -Pkotlin.daemon.jvmargs="${{ env.KOTLIN_DAEMON_JVMARGS }}"
           --no-configuration-cache
           build
+          ${{ (github.event_name == 'push' || inputs.upload_to_mavencentral) && 'publishAllPublicationsToMavenCentralRepository' || '' }}
           ${{ (github.event_name == 'push' || inputs.create_github_release) && 'foldDistribution' || '' }}
           ${{ (github.event_name == 'push' || inputs.upload_to_s3) && 'publishAllPublicationsToPixnewsS3Repository' || '' }}
           --stacktrace
