--- a/config/version.properties
+++ b/config/version.properties
@@ -4,7 +4,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-wsohb_version = 0.7-SNAPSHOT
+wsohb_version = 0.7
 
 # wsoh_common_xdg_version = 0.1-SNAPSHOT
 # wsoh_sqlite_driver_binary_reader_version = 0.1-SNAPSHOT
